tests/eval/exp/bad/msg_error3.scilla
let x = Int64 42 in
let ff = fun (z : Int) => x in
let y = x in
let a = y in
let m1 = {_tag : "Main"; amount : x; code: a} in
let m2 = {_tag : "Main"; amount : x; mmm: o} in
m2
